2009-04-16  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add 
	  Mono.Rocks/ValueReader.cs to the build.

2009-04-12  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush ObjectRocks documentation.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush documentation.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush TypeRocks documentation.

2009-03-29  Jonathan Pryor  <jpryor@novell.com>

	* mkdelegates: Generate <exception/> docs for ArgumentNullException;
	  fix <typeparam/> generation.
	* Mono.Rocks/Delegates.cs, doc/en/Mono.Rocks/DelegateRocks.xml: Flush.

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush (Either.TryParse & Maybe.TryParse docs).

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/Either.xml: Flush.

2009-03-20  Jonathan Pryor  <jpryor@novell.com>

	* mkeithers: Generate <exception/> XML comments.
	* doc/en/Mono.Rocks/Either*.xml: Flush <exception/> comments.

2009-03-14  Jonathan Pryor  <jpryor@novell.com>

	* doc/**: Flush (add <exception/> specifications, as generated by
	  `make doc-update MDOC_OPTIONS=--exceptions=asm'.

2009-03-14  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Allow $NUNIT_OPTIONS to be passed to nunit-console2 in the
	  check and check-all targets.
	* doc/Makefile.include: Use mdoc, not monodocer; Allow MDOC_OPTIONS to 
	  be specified to mdoc-update.
	* doc/**: Flush (Tree-related extension methods).
	* Tests/Mono.Rocks.Tests.csproj: Flush (specify target framework).

2009-01-09  Jonathan Pryor  <jpryor@novell.com>

	* MIT.X11: Added; the library license.  This really should have been
	  added ages ago...

2008-12-26  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush; changes due to mdoc changes (e.g. removal of
	  Extension and other compiler-generated attributes), class library 
	  changes (mkdelegates changes, etc.).

2008-12-26  Jonathan Pryor  <jpryor@novell.com>
